--- a/gym-page/index.html
+++ b/gym-page/index.html
@@ -3,6 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Welcome to our gym website. Get fit and stay healthy with our state-of-the-art facilities and expert trainers."
+    />
+    <meta
+      name="keywords"
+      content="stack fitness, gym, Gym, Fitness, Health, Workout, Exercise, Training"
+    />
+    <meta name="author" content="Your Gym Name" />
+    <meta property="og:title" content="Your Gym - Achieve Your Fitness Goals" />
+    <meta
+      property="og:description"
+      content="Join us to experience the best fitness journey with expert trainers and modern equipment."
+    />
     <link rel="icon" href="/favicon.ico" />
     <title>Stack Fitness - Your fitness expert</title>
   </head>
